--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@vuelidate/validators": "^2.0.0-alpha.31",
     "axios": "^0.25.0",
     "luxon": "^3.0.3",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.1",
     "vite": "^3.0.9",
     "vue": "^3.0.0",
     "vue-multiselect": "^3.0.0-alpha.2",
